# graphtmu

./: .env.sample  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  otel-collector.yaml  prometheus.yaml
.github/: dependabot.yml
apps/client/: instrumentation.ts  package.json
apps/client/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/client/app/teacher/: layout.tsx
apps/client/app/teacher/all/: page.tsx
apps/client/components/: Container.tsx  Logo.tsx
apps/client/lib/fetchers/: keyword.ts
apps/client/lib/hooks/: useHandleParam.ts
apps/client/lib/models/: index.ts  teacher.ts
apps/client/lib/repositories/: keyword.ts
apps/client/lib/usecases/: keyword.ts
apps/js/client/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/js/client/app/: page.tsx
apps/js/client/app/teacher/: page.tsx
apps/js/client/app/teacher/[id]/: page.tsx
apps/js/client/components/: Container.tsx  GitHubIcon.tsx  Logo.tsx  Navbar.tsx  TeacherCard.tsx
apps/js/client/lib/: constants.ts
apps/js/client/lib/clients/: firebase.ts  openai.ts
apps/js/client/lib/fetchers/: keyword.ts
apps/js/client/lib/hooks/: useHandleParam.ts
apps/js/client/lib/models/: index.ts  keyword.ts  teacher.ts
apps/js/client/lib/repositories/: keyword.ts  teacher.ts
apps/js/client/lib/usecases/: teacher.ts
apps/py/extractor/: pyproject.toml
apps/py/extractor/src/extractor/: firestore.py  llm.py  teacher.py
apps/py/grapher/: pyproject.toml
apps/py/grapher/src/grapher/: __init__.py  __main__.py
apps/py/scraper/: pyproject.toml
apps/py/scraper/src/scraper/: settings.py
apps/py/scraper/src/scraper/loaders/: kyouikujouhou.py  tmu.py
apps/py/scraper/src/scraper/pipelines/: __init__.py  affiliations.py  email.py
apps/py/scraper/src/scraper/spiders/: __init__.py  kyouikujouhou_spider.py  tmu_spider.py
apps/py/scraper/src/scraper/utils/: kyouikujouhou.py
client/: .env.sample  .gitignore  instrumentation.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: genkit.ts  layout.tsx  page.tsx
client/app/api/keywords/: route.ts
client/app/api/teachers/: route.ts
client/app/teacher/: layout.tsx  page.tsx
client/app/teacher/[id]/: page.tsx
client/app/teacher/all/: page.tsx
client/components/: GitHubIcon.tsx  Logo.tsx  Navbar.tsx  TeacherCard.tsx  teacher.tsx
client/lib/: clients.ts  keyword.ts  teacher.ts  utils.ts
client/lib/clients/: firebase.ts  openai.ts
client/lib/converters/: keyword.ts  teacher.ts
client/lib/models/: keyword.ts  teacher.ts
client/lib/repositories/: keyword.ts  teacher.ts
client/lib/usecases/: keyword.ts  teacher.ts
data/: teacher.jsonl
data/raw/tmu/: teacher.jsonl
firebase/: firestore.indexes.json
server/: .env.sample  .gitignore  pyproject.toml  scrapy.cfg
server/data/: teacher.jsonl
server/data/raw/tmu/: teacher.jsonl
server/data/tmu/: teacher.jsonl
server/firebase/: .firebaserc  firestore.rules
server/graphtmu/extractor/: firestore.py  teacher.py
server/graphtmu/grapher/: __init__.py  __main__.py
server/graphtmu/models/: kyouikujouhou.py  teacher.py  tmu.py
server/graphtmu/models/raw/: kyouikujouhou.py
server/graphtmu/scraper/: __init__.py  settings.py  utils.py
server/graphtmu/scraper/loaders/: __init__.py  kyouikujouhou.py  tmu.py
server/graphtmu/scraper/pipelines/: affiliations.py
server/graphtmu/scraper/spiders/: kyouikujouhou_spider.py  tmu_spider.py
server/graphtmu/scraper/utils/: __init__.py  tmu.py
server/graphtmu/utils/: __init__.py  constants.py
server/notebooks/: rdf.ipynb  teacher.ipynb
