[tool.poetry]
name = "graphtmu"
version = "0.1.0"
description = "TMU needs to do something about its shitty syllabus search system."
authors = ["yoseio <yoseio@brainoid.dev>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.common.dependencies]
email-validator = "^2.2.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-dotenv = "^1.0.1"
toolz = "^0.12.1"
tqdm = "^4.66.4"
pandas = "^2.2.2"

[tool.poetry.group.llm.dependencies]
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-core = "^0.2.35"
langchain-openai = "^0.1.21"

[tool.poetry.group.extractor.dependencies]
firebase-admin = "^6.5.0"
google-cloud-firestore = "^2.17.0"

[tool.poetry.group.grapher.dependencies]
rdflib = "^7.0.0"
rdflib-neo4j = "^1.0"

[tool.poetry.group.scraper.dependencies]
itemadapter = "^0.9.0"
scrapy = "^2.11.2"
w3lib = "^2.2.1"

[tool.poetry.group.dev.dependencies]
# lint
pyright = "^1.1.370"
ruff = "^0.5.1"

# dev
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
# linter
pyright = "pyright"
ruff_check = "ruff check . --preview"
ruff_format = "ruff format  . --preview"
ruff_sort = "ruff check --select I --fix . --preview"

# extractor
extract_teacher = "python -m graphtmu.extractor.teacher"
extract_firestore = "python -m graphtmu.extractor.firestore"

# grapher
graph = "python -m graphtmu.grapher"

# scraper
scrape_reset = "rm -rf ../data/raw/*"
scrape_kyouikujouhou = "scrapy crawl kyouikujouhou"
scrape_tmu = "scrapy crawl tmu"

[[tool.poe.tasks.format]]
sequence = ["ruff_sort", "ruff_format"]
ignore_fail = "return_non_zero"

[[tool.poe.tasks.check]]
sequence = ["ruff_check", "pyright"]
ignore_fail = "return_non_zero"

[[tool.poe.tasks.extract]]
sequence = ["extract_teacher", "extract_firestore"]
ignore_fail = "return_non_zero"

[[tool.poe.tasks.scrape]]
sequence = ["scrape_reset", "scrape_kyouikujouhou", "scrape_tmu"]
ignore_fail = "return_non_zero"
